apps/site/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: site
  name: default-site
spec:
  selector:
    app.kubernetes.io/name: default-site
    app.kubernetes.io/part-of: site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
